--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -42,14 +42,16 @@ jobs:
           - name: 'macOS x86_64'
             arhitecture: 'x86_64'
             machine: 'macos-13-large'
+            macos_deployment_target: '10.12'
           - name: 'macOS ARM64 (M1)'
             arhitecture: 'arm64'
             machine: 'macos-13-xlarge'
+            macos_deployment_target: '11.0'
     runs-on: ${{ matrix.machine }}
     env:
       CMAKE_BUILD_TYPE: 'Release'
       CMAKE_GENERATOR: 'Ninja Multi-Config'
-      MACOSX_DEPLOYMENT_TARGET: ${{ matrix.arhitecture == 'x86_64' && '10.12' || '11.0' }}
+      MACOSX_DEPLOYMENT_TARGET: ${{ matrix.macos_deployment_target }}
       CMAKE_CXX_COMPILER_LAUNCHER: ccache
       CMAKE_C_COMPILER_LAUNCHER: ccache
       OPENVINO_REPO: ${{ github.workspace }}/openvino
