--- a/.ci/azure/linux_ngraph_onnx.yml
+++ b/.ci/azure/linux_ngraph_onnx.yml
@@ -102,6 +102,11 @@ jobs:
       sudo sh get-docker.sh
     displayName: 'Install dependencies'
 
+  - script: |
+      mkdir -p $HOME/intel/
+      echo 0 > $HOME/intel/openvino_telemetry
+    displayName: 'Disable Telemetry'
+
   - script:
       src/frontends/onnx/tests/tests_python/model_zoo_preprocess.sh -d $(MODELS_DIR)/models_data -o -s "$(ONNX_MODEL_ZOO_SHA)"
     displayName: 'Update models'
