--- a/src/bindings/python/CMakeLists.txt
+++ b/src/bindings/python/CMakeLists.txt
@@ -406,7 +406,7 @@ endif()
 if(OpenVINODeveloperPackage_FOUND)
     # TODO: understand whether it's required
     # provides a callback function to describe each component in repo
-    # include("${OpenVINOPython_SOURCE_DIR}/../../../cmake/packaging/packaging.cmake")
+    include("${OpenVINOPython_SOURCE_DIR}/../../../cmake/packaging/packaging.cmake")
 
     ov_cpack(${OV_CPACK_COMPONENTS_ALL})
 endif()
